[package]
name = "git-nuke"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
clap = { version = "4.5.3", features = ["derive"] }
ignore = "0.4.22"
rayon = "1.9.0"
indicatif = "0.17.8"
