[package]
name = "git-nuke"
version = "0.1.0"
edition = "2021"
authors = ["Simon Buchan <simon.buchan.nz@gmail.com>"]
description = "Remove all ignored files from a git repository, fast"
license = "MIT"
keywords = ["git", "clean", "ignore"]
repository = "https://github.com/simonbuchan/git-nuke"

[dependencies]
anyhow = "1.0.81"
clap = { version = "4.5.3", features = ["derive"] }
ignore = "0.4.22"
rayon = "1.9.0"
indicatif = "0.17.8"
